# SmartMeeting

./: .env.example  .env.prod.example  .env.production.example  .gitignore  AGENTS.md  AI_CONFIG.md  CLAUDE.md  HANDOFF.md  LICENSE  PROJECT.md  README.md  TASKS.md  backend-run.err  build_release.py  dev-one-command.err  docker-compose.yml  frontend-run.err  i18n_strings.json  mempalace.yaml  package.json  pyrightconfig.json
.claude/: settings.local.json
.github/: copilot-instructions.md
backend/: .env.example  AGENTS.md  Dockerfile  README.md  main.py  pytest.ini  requirements.txt
database/: AGENTS.md  README.md  docker-init.sh
desktop/: setup-deps.sh
desktop/src-tauri/: Cargo.toml  libjavascriptcoregtk-4.1-dev_2.44.0-2_amd64.deb  libpkgconf3_1.8.1-2build1_amd64.deb  libssl-dev_3.0.13-0ubuntu3.9_amd64.deb  libwebkit2gtk-4.1-dev_2.44.0-2_amd64.deb  pkg-config_1.8.1-2build1_amd64.deb  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: audio_capture.rs  lib.rs  meeting_session.rs  transcription.rs
docs/: README.md  SmartMeeting-Detailed-Design-Specification-V2.md  SmartMeeting-Detailed-Design-Specification.md  SmartMeeting智能会议系统项目立项规划书.md  SmartMeeting核心技术细节与架构复盘.md  SmartMeeting答辩PPT与演示说明.md  SmartMeeting软件使用说明书.md  SmartMeeting软件使用说明书（图文版）.md  SmartMeeting软件需求规格说明书SRS.md  SmartMeeting软件需求规格说明书SRS_V2.md  backend-api.md  database-design.md  database-performance-baseline-2026-03-30.md  development-log-2026-03-12.md  engineering-framework.md  frontend-runbook.md  performance-validation-report.md  pr-description-2026-03-14.md  (+2 more)
(+380 files in other folders)
